@@ -1,3 +1,12 @@
+2011-01-24  Doug Hellmann  <dhellmann@racemi.com>
+
+	* virtualenvwrapper.sh: Replace hard-coded name "virtualenv" with
+	the variable VIRTUALENVWRAPPER_VIRTUALENV to allow tests (and
+	users) to override it.
+
+	* tests/test_mkvirtualenv.sh (test_virtualenv_fails): Add a test
+	to reproduce the conditions reported in issue #76.
+
 2010-12-27  Doug Hellmann  <dhellmann@racemi.com>
 
 	* virtualenvwrapper.sh (virtualenvwrapper_get_python_version):
